--- a/Planning_Projection/src/planning_projection/vue/FXMLDocument.fxml
+++ b/Planning_Projection/src/planning_projection/vue/FXMLDocument.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.shape.Rectangle?>
 
-<AnchorPane id="AnchorPane" prefHeight="409.0" prefWidth="506.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="planning_projection.FXMLDocumentController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="409.0" prefWidth="506.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="planning_projection.vue.FXMLDocumentController">
     <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="416.0" layoutX="-1.0" layoutY="-1.0" stroke="BLACK" strokeType="INSIDE" width="513.0">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="435.0" layoutX="-1.0" layoutY="-1.0" stroke="BLACK" strokeType="INSIDE" width="513.0">
          <fill>
             <RadialGradient centerX="0.45111113654242624" centerY="0.5" radius="0.8831775166163935">
                <stops>
@@ -21,6 +21,7 @@
       </Rectangle>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="310.0" layoutX="81.0" layoutY="50.0" stroke="BLACK" strokeType="INSIDE" width="360.0" />
       <TextField fx:id="login" layoutX="185.0" layoutY="146.0" />
-        <Button fx:id="button" layoutX="346.0" layoutY="286.0" onAction="#handleButtonAction" text="Click Me!" />
+        <Button fx:id="button" layoutX="323.0" layoutY="286.0" onAction="#handleButtonAction" text="Se Connecter" />
+      <TextField fx:id="login1" layoutX="190.0" layoutY="208.0" />
     </children>
 </AnchorPane>
